# Diatom

./: .gitignore  AXIOMS.md  CHANGELOG.md  INTEGRATION.md  LICENSE  README.md  audit.toml  config.toml  manifest.json
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
scripts/: check-black-zone.sh  check-zed-deps.sh  strip-zed.sh
shell/: Cargo.toml
shell/crates/diatom_agent/: Cargo.toml
shell/crates/diatom_agent/src/: executor.rs  lib.rs  planner.rs  runner.rs  tools.rs
shell/crates/diatom_bridge/: Cargo.toml
shell/crates/diatom_bridge/src/: client.rs  lib.rs  protocol.rs  protocol_agent_patch.rs  server.rs  slm_adapter.rs  transport.rs  zed_link.rs
shell/crates/diatom_bridge/tests/: integration_handshake.rs
shell/crates/diatom_devtools/: Cargo.toml
shell/crates/diatom_devtools/src/: devtools_window.rs  network_panel.rs  sources_panel.rs
shell/crates/diatom_ui/: Cargo.toml
shell/crates/diatom_ui/src/: lib.rs
src/: ai-panel.css  diatom.css  fonts.css  index.html  main.js  manifest.json  shadow-index.css  sw.js  tab-groups.css  tos-auditor.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  webview-content.json
src-tauri/resources/: builtin_cosmetic.txt  builtin_patterns.txt  diatom-api.js  diatom-devpanel-hooks.js
src-tauri/resources/boosts/: clean-reader.css  focus-dark.css  print-friendly.css
src-tauri/src/: a11y.rs  agent_commands.rs  bandwidth_limiter.rs  blocker.rs  boosts.rs  breach_monitor.rs  commands.rs  compat.rs  compliance.rs  db.rs  decoy.rs  dom_crusher.rs  download_renamer.rs  dp_echo.rs  echo.rs  etag_cache.rs  freeze.rs  ghostpipe.rs  labs.rs  local_file_bridge.rs  main.rs  marketplace.rs  mcp_host.rs  museum_version.rs  net_monitor.rs  noise_transport.rs  nostr.rs  ohttp.rs  panic_button.rs  passkey.rs  pir.rs  power_budget.rs  pricing_radar.rs  privacy.rs  rss.rs  search_engine.rs  sentinel.rs  shadow_index.rs  slm.rs  state.rs  (+14 more)
src-tauri/src/ai/: mcp.rs  mod.rs  renamer.rs  shadow_index.rs  slm.rs
src-tauri/src/auth/: mod.rs  passkey.rs  totp.rs  trust.rs
src-tauri/src/browser/: a11y.rs  boosts.rs  budget.rs  dev_panel.rs  dom_crusher.rs  mod.rs  proxy.rs  tabs.rs
src-tauri/src/commands/: ai.rs  auth.rs  browser.rs  data.rs  engine.rs  features.rs  mod.rs  privacy.rs  storage.rs  sync.rs  system.rs
src-tauri/src/engine/: bandwidth.rs  blocker.rs  cache.rs  compat.rs  ghostpipe.rs  mod.rs  monitor.rs  plugins.rs  url_stripper.rs  wasm_sandbox.rs
src-tauri/src/features/: breach.rs  compliance.rs  labs.rs  localfiles.rs  mod.rs  panic.rs  pricing.rs  report.rs  rss.rs  search.rs  sentinel.rs  tos.rs  zen.rs
src-tauri/src/privacy/: config.rs  fingerprint_norm.rs  mod.rs  ohttp.rs  onion.rs  pir.rs  threat.rs  wifi.rs
src-tauri/src/research/: mod.rs  pricing.rs
src-tauri/src/storage/: db.rs  freeze.rs  guard.rs  mod.rs  vault.rs  versioning.rs  warc_export.rs
src-tauri/src/storage/db/: auth.rs  core.rs  history.rs  mod.rs  museum.rs  tabs.rs  types.rs  vault.rs
src-tauri/src/sync/: marketplace.rs  mod.rs  noise.rs  nostr.rs
src-tauri/tests/: privacy_behaviour.rs
src/browser/: compat.js  hotkey.js  ime-fix.js  ipc.js  lustre.js  resonance-dispatch.js  tabs.js  utils.js
src/features/: agent.js  diatom-engine.js  dom-crusher.js  echo-export.js  echo.js  network-panel.js  peek.js  shadow-index.js  tab-groups.js  tos-auditor.js  vault.js  video-controller.js  video-pip.js  vision-overlay.js  zen.js
src/ui/: about.html  home-base.html  labs.html  localfiles.html  onboarding.html  ui-dark.css  ui-paper.css  vault.html
src/workers/: core.worker.js
zed-core/: Cargo.toml
zed-core/crates/diatom_bridge/: Cargo.toml
zed-core/crates/diatom_bridge/src/: client.rs  lib.rs  protocol.rs  server.rs  transport.rs  zed_link.rs
zed-core/crates/diatom_devtools/: Cargo.toml
zed-core/crates/diatom_devtools/src/: bridge_dispatch.rs  console_panel.rs  devtools_window.rs  main.rs
