# zed-core/Cargo.toml
#
# Stripped Zed workspace — Diatom integration build.
#
# Principle: whitelist-only. Only crates explicitly listed in INTEGRATION.md §II
# are included. The strip-zed.sh sync script validates that this list matches
# the crate directories on disk after each upstream sync.
#
# Removed crates do not appear in `members`; Cargo will not compile them.
# Telemetry / collaboration / cloud AI / auto-update / remote server — all absent.

[workspace]
resolver = "2"

members = [
    # ── Editor core ─────────────────────────────────────────────────────────
    "crates/editor",
    "crates/text",
    "crates/rope",
    "crates/multi_buffer",
    "crates/buffer_diff",
    "crates/language",
    "crates/language_core",
    "crates/language_extension",
    "crates/languages",
    "crates/grammars",
    "crates/lsp",
    "crates/diagnostics",
    "crates/outline",
    "crates/outline_panel",
    "crates/repl",
    "crates/prettier",

    # ── GPUI UI framework ────────────────────────────────────────────────────
    "crates/gpui",
    "crates/gpui_macos",
    "crates/gpui_linux",
    "crates/gpui_windows",
    "crates/gpui_wgpu",
    "crates/gpui_tokio",
    "crates/gpui_util",
    "crates/gpui_macros",
    "crates/ui",
    "crates/ui_input",
    "crates/ui_macros",
    "crates/ui_prompt",
    "crates/component",
    "crates/menu",
    "crates/picker",

    # ── Theme / syntax highlighting ──────────────────────────────────────────
    "crates/theme",
    "crates/syntax_theme",
    "crates/theme_settings",
    "crates/theme_extension",
    "crates/theme_selector",
    "crates/theme_importer",

    # ── Search ───────────────────────────────────────────────────────────────
    "crates/search",
    "crates/fuzzy",

    # ── Command palette ──────────────────────────────────────────────────────
    "crates/command_palette",
    "crates/command_palette_hooks",

    # ── Workspace / layout ───────────────────────────────────────────────────
    "crates/workspace",
    "crates/sidebar",
    "crates/panel",
    "crates/breadcrumbs",
    "crates/tab_switcher",
    "crates/go_to_line",
    "crates/platform_title_bar",

    # ── Settings / keymaps ───────────────────────────────────────────────────
    "crates/settings",
    "crates/settings_content",
    "crates/settings_macros",
    "crates/settings_json",
    "crates/settings_ui",
    "crates/keymap_editor",
    "crates/vim",
    "crates/vim_mode_setting",
    "crates/which_key",

    # ── Terminal ─────────────────────────────────────────────────────────────
    "crates/terminal",
    "crates/terminal_view",

    # ── Debugger (DAP) ───────────────────────────────────────────────────────
    "crates/dap",
    "crates/dap_adapters",
    "crates/debugger_ui",
    "crates/debugger_tools",
    "crates/debug_adapter_extension",

    # ── Git ──────────────────────────────────────────────────────────────────
    "crates/git",
    "crates/git_ui",
    "crates/git_graph",
    "crates/git_hosting_providers",

    # ── Tasks / snippets ─────────────────────────────────────────────────────
    "crates/task",
    "crates/tasks_ui",
    "crates/snippet",
    "crates/snippet_provider",
    "crates/snippets_ui",

    # ── File system / project ────────────────────────────────────────────────
    "crates/fs",
    "crates/worktree",
    "crates/project",
    "crates/project_panel",
    "crates/project_symbols",
    "crates/file_finder",
    "crates/recent_projects",
    "crates/node_runtime",

    # ── Extension system (WASM) ──────────────────────────────────────────────
    "crates/extension",
    "crates/extension_api",
    "crates/extension_host",
    "crates/extension_cli",
    "crates/extensions_ui",
    "crates/language_selector",
    "crates/language_tools",
    "crates/toolchain_selector",

    # ── Preview / content ────────────────────────────────────────────────────
    "crates/markdown",
    "crates/markdown_preview",
    "crates/svg_preview",
    "crates/image_viewer",
    "crates/csv_preview",

    # ── Inspector (replaces browser Inspector tab) ───────────────────────────
    "crates/inspector_ui",

    # ── Infrastructure ───────────────────────────────────────────────────────
    "crates/collections",
    "crates/util",
    "crates/util_macros",
    "crates/clock",
    "crates/sum_tree",
    "crates/http_client",
    "crates/http_client_tls",
    "crates/net",
    "crates/assets",
    "crates/file_icons",
    "crates/icons",
    "crates/paths",
    "crates/scheduler",
    "crates/refineable",
    "crates/encoding_selector",
    "crates/line_ending_selector",
    "crates/time_format",
    "crates/env_var",
    "crates/shell_command_parser",
    "crates/streaming_diff",
    "crates/zed_actions",

    # ── Language model interface (trait only — no cloud backend) ─────────────
    # language_model defines the trait; the Diatom SLM provides the implementation.
    "crates/language_model",

    # ── Diatom bridge crates (created by this project) ───────────────────────
    "crates/diatom_bridge",
    "crates/diatom_devtools",
]

# Crates removed from the upstream Zed workspace (recorded here for strip-zed.sh
# validation):
# telemetry, telemetry_events, zlog, zlog_settings, ztracing, ztracing_macro,
# action_log, crashes, miniprofiler_ui,
# collab, collab_ui, channel, call, livekit_api, livekit_client, proto, rpc, notifications,
# anthropic, bedrock, cloud_api_client, cloud_api_types, cloud_llm_client,
# codestral, deepseek, google_ai, mistral, open_ai, open_router, vercel, x_ai,
# acp_thread, acp_tools, copilot, copilot_chat, copilot_ui,
# agent, agent_ui, agent_servers, agent_settings, ai_onboarding, language_onboarding,
# onboarding, edit_prediction*, eval_cli, eval_utils, zeta_prompt, prompt_store,
# rules_library, context_server, auto_update*, feedback,
# remote, remote_connection, remote_server, dev_container, askpass,
# db, migrator, sqlez, sqlez_macros, client, credentials_provider,
# zed_credentials_provider, session, feature_flags,
# story, storybook, component_preview, audio, denoise, media,
# web_search, web_search_providers

[workspace.dependencies]
# Unified versions to avoid duplicate compilation
gpui              = { path = "crates/gpui" }
ui                = { path = "crates/ui" }
editor            = { path = "crates/editor" }
language          = { path = "crates/language" }
lsp               = { path = "crates/lsp" }
project           = { path = "crates/project" }
workspace-crate   = { path = "crates/workspace", package = "workspace" }
extension_host    = { path = "crates/extension_host" }
diatom_bridge     = { path = "crates/diatom_bridge" }
diatom_devtools   = { path = "crates/diatom_devtools" }
settings          = { path = "crates/settings" }
theme             = { path = "crates/theme" }
util              = { path = "crates/util" }
fs                = { path = "crates/fs" }

anyhow            = "1"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
tokio             = { version = "1", features = ["rt-multi-thread", "sync", "time", "io-util", "macros", "net"] }
futures           = "0.3"
smol              = "2"
log               = "0.4"
parking_lot       = "0.12"

[profile.release]
opt-level     = "z"    # Optimise for binary size (target: 13 MB shell)
lto           = true
codegen-units = 1
strip         = "symbols"
panic         = "abort"

[profile.dev]
opt-level = 1
