[package]
name        = "diatom_devtools"
version     = "0.1.0"
edition     = "2024"
description = "Browser DevTools replacement panel — GPUI-native, replaces F12"
license     = "BUSL-1.1"

[[bin]]
name = "diatom-devpanel"
path = "src/main.rs"

[dependencies]
diatom_bridge  = { path = "../diatom_bridge" }
gpui           = { path = "../gpui" }
ui             = { path = "../ui" }
editor         = { path = "../editor" }
language       = { path = "../language" }
lsp            = { path = "../lsp" }
project        = { path = "../project" }
workspace-crate = { path = "../workspace", package = "workspace" }
terminal       = { path = "../terminal" }
terminal_view  = { path = "../terminal_view" }
dap            = { path = "../dap" }
dap_adapters   = { path = "../dap_adapters" }
debugger_ui    = { path = "../debugger_ui" }
inspector_ui   = { path = "../inspector_ui" }
extension_host = { path = "../extension_host" }
fs             = { path = "../fs" }
worktree       = { path = "../worktree" }
settings       = { path = "../settings" }
theme          = { path = "../theme" }
search         = { path = "../search" }
util           = { path = "../util" }
node_runtime   = { path = "../node_runtime" }
outline_panel  = { path = "../outline_panel" }
project_panel  = { path = "../project_panel" }
git_ui         = { path = "../git_ui" }

anyhow     = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "macros"] }
futures    = "0.3"
log        = "0.4"
env_logger = "0.11"
smol       = "2"
